Version 9.2 - xxxx edition. 22 January 2021

Added support for browsing inside disk images (.mmc, .ide, etc) from ZEsarUX file browser (Debug->File utilities)
Added command line setting --add-file-to-mmc to be able to copy files to a mmc image before starting ZEsarUX
Added new ZX-Uno Prism video mode
Added Dandanator storage button icon
Added TBBlue snx snapshot support
Added SamRam Gerton Lunter interface emulation
Added ZRCP commands:
-realtape-open

Added alternate Jupiter ACE rom
Added another fourth easter egg ;)
Added read only setting for esxdos handler
Added .nex file viewer

Improved CPC emulation: 
-Video scanlines rendering
-Joystick emulation
-Stereo emulation

Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)

Improved menu interface:
-Added action to minimize all windows
-Added setting to ignore mouse click to open the menu
-Added more utf-8 characters support
-Added setting to show files in hexa+ascii using file viewer

Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Fixed annoying flickering in menu using XWindows video driver
Fixed loading General Sound rom
Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks

Fixed CPC bugs: