@@ -1,6 +1,5 @@
 Version 9.2 - xxxx edition. 22 January 2021
 
-Added support for browsing inside disk images (.mmc, .ide, etc) from ZEsarUX file browser (Debug->File utilities)
 Added command line setting --add-file-to-mmc to be able to copy files to a mmc image before starting ZEsarUX
 Added new ZX-Uno Prism video mode
 Added Dandanator storage button icon
@@ -13,6 +12,11 @@ Added alternate Jupiter ACE rom
 Added another fourth easter egg ;)
 Added read only setting for esxdos handler
 Added .nex file viewer
+
+Improved File utilities browser:
+-Added support for browsing inside disk images (.mmc, .ide, etc) from ZEsarUX file browser (Debug->File utilities)
+-Detect when source and target directories are the same when moving or copying
+-Show more info in some file viewers (.sna, .p, .o, etc)
 
 Improved CPC emulation: 
 -Video scanlines rendering
